Change admob inmobi mediation

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-admob-free": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-admob-mediation-inmobi": {}
+      "cordova-plugin-admob-mediation-inmobi": {},
+      "cordova-admob-inmobi": {}
     }
   },
   "dependencies": {
+    "cordova-admob-inmobi": "0.0.4",
     "cordova-ios": "~4.4.0",
     "cordova-plugin-admob-free": "0.13.0",
     "cordova-plugin-admob-mediation-inmobi": "git+https://github.com/rebrandsoftware/cordova-plugin-admob-mediation-inmobi.git",
