--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "cordova-admob-inmobi": "0.0.4",
-    "cordova-ios": "~4.4.0",
+    "cordova-ios": "4.4.0",
     "cordova-plugin-admob-free": "0.13.0",
     "cordova-plugin-admob-mediation-inmobi": "git+https://github.com/rebrandsoftware/cordova-plugin-admob-mediation-inmobi.git",
     "cordova-plugin-splashscreen": "^5.0.1",
